--- a/client/src/ui/index.css
+++ b/client/src/ui/index.css
@@ -64,3 +64,9 @@ button:focus-visible {
   align-items: center;
   justify-content: center;
 }
+
+.dropzone-text {
+    font-size: 1.2em;
+    font-weight: 500;
+    padding: 20px;
+}
